feat: 커뮤니티 서비스 개선 및 DB 인덱스 최적화
- CommunityService 로직 개선
- Repository 쿼리 최적화 (RoomMember, Community 관련)
- DB 조회 성능을 위한 인덱스 마이그레이션 추가 (V2)
- .gitignore 업데이트

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>