@@ -1,6 +1,7 @@
 package com.board_game_back.Service;
 
 import com.board_game_back.DTO.CommunityDto;
+import com.board_game_back.Entity.BoardGame;
 import com.board_game_back.Entity.Community;
 import com.board_game_back.Entity.CommunityAdmin;
 import com.board_game_back.Entity.CommunityMember;
@@ -17,7 +18,12 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Collection;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import com.board_game_back.Utils.InviteCodeUtil;
 import java.util.stream.Collectors;
 
@@ -89,8 +95,7 @@ public class CommunityService {
         Community community = communityRepository.findById(communityId)
             .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 커뮤니티입니다."));
 
-        List<Room> rooms = roomRepository.findByCommunityId(communityId);
-        int groupCount = rooms.size();
+        int groupCount = (int) roomRepository.countByCommunityId(communityId);
         long memberCount = communityMemberRepository.countByCommunityId(communityId);
 
         List<CommunityDto.AdminInfo> admins = communityAdminRepository.findByCommunityId(communityId)
@@ -107,15 +112,31 @@ public class CommunityService {
 
     @Transactional(readOnly = true)
     public List<CommunityDto.RoomResponse> getCommunityRooms(Long communityId, Long memberId) {
-        return roomRepository.findByCommunityId(communityId).stream()
+        List<Room> rooms = roomRepository.findByCommunityId(communityId);
+        if (rooms.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        Set<Long> boardGameIds = rooms.stream()
+            .map(Room::getBoardGameId)
+            .filter(id -> id != null)
+            .collect(Collectors.toSet());
+        Map<Long, String> imageUrlByBoardGameId = boardGameRepository.findByIdIn(boardGameIds).stream()
+            .collect(Collectors.toMap(BoardGame::getId, BoardGame::getImageUrl));
+
+        List<Long> roomIds = rooms.stream()
+            .map(Room::getId)
+            .toList();
+        Map<Long, Long> memberCountByRoomId = toLongMap(roomMemberRepository.countByRoomIds(roomIds));
+        Set<Long> joinedRoomIds = memberId == null
+            ? Collections.emptySet()
+            : Set.copyOf(roomMemberRepository.findJoinedRoomIds(memberId, roomIds));
+
+        return rooms.stream()
             .map(r -> {
-                String imageUrl = r.getBoardGameId() != null
-                    ? boardGameRepository.findById(r.getBoardGameId())
-                        .map(g -> g.getImageUrl()).orElse(null)
-                    : null;
-                boolean isMember = memberId != null &&
-                    roomMemberRepository.findByRoomIdAndMemberId(r.getId(), memberId).isPresent();
-                long memberCount = roomMemberRepository.countByRoomId(r.getId());
+                String imageUrl = r.getBoardGameId() == null ? null : imageUrlByBoardGameId.get(r.getBoardGameId());
+                boolean isMember = joinedRoomIds.contains(r.getId());
+                long memberCount = memberCountByRoomId.getOrDefault(r.getId(), 0L);
                 return new CommunityDto.RoomResponse(
                     r.getId(), r.getName(), r.getInviteCode(), r.getBoardGameId(), imageUrl,
                     r.isSessionActive(), isMember, memberCount);
@@ -176,12 +197,13 @@ public class CommunityService {
 
     @Transactional(readOnly = true)
     public List<CommunityDto.Response> getJoinedCommunities(Long memberId) {
-        return communityMemberRepository.findCommunityIdsByMemberId(memberId).stream()
+        List<Long> communityIds = communityMemberRepository.findCommunityIdsByMemberId(memberId).stream()
             .distinct()
-            .flatMap(id -> communityRepository.findById(id).stream())
+            .toList();
+        List<Community> communities = communityRepository.findAllById(communityIds).stream()
             .filter(c -> !c.getCreatedBy().equals(memberId))
-            .map(this::toResponse)
-            .collect(Collectors.toList());
+            .toList();
+        return buildCommunityResponses(communities);
     }
 
     @Transactional
@@ -201,22 +223,60 @@ public class CommunityService {
 
     @Transactional(readOnly = true)
     public List<CommunityDto.Response> getMyCommunitiesList(Long memberId) {
-        return communityRepository.findAllByCreatedBy(memberId)
-            .stream()
-            .map(this::toResponse)
-            .collect(Collectors.toList());
+        return buildCommunityResponses(communityRepository.findAllByCreatedBy(memberId));
     }
 
     private CommunityDto.Response toResponse(Community c) {
-        long memberCount = communityMemberRepository.countByCommunityId(c.getId());
-        int groupCount = (int) roomRepository.countByCommunityId(c.getId());
-        List<CommunityDto.AdminInfo> admins = communityAdminRepository.findByCommunityId(c.getId())
+        return buildCommunityResponses(List.of(c)).stream()
+            .findFirst()
+            .orElseThrow();
+    }
+
+    private List<CommunityDto.Response> buildCommunityResponses(List<Community> communities) {
+        if (communities.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        List<Long> communityIds = communities.stream()
+            .map(Community::getId)
+            .toList();
+        Map<Long, Long> memberCountByCommunityId = toLongMap(communityMemberRepository.countByCommunityIds(communityIds));
+        Map<Long, Long> groupCountRaw = toLongMap(roomRepository.countByCommunityIds(communityIds));
+        Map<Long, List<CommunityDto.AdminInfo>> adminsByCommunityId = communityAdminRepository.findByCommunityIdIn(communityIds)
             .stream()
-            .map(ca -> new CommunityDto.AdminInfo(ca.getMember().getId(), ca.getMember().getNickname(), ca.getMember().getProfileImage()))
+            .collect(Collectors.groupingBy(
+                admin -> admin.getCommunity().getId(),
+                LinkedHashMap::new,
+                Collectors.mapping(
+                    admin -> new CommunityDto.AdminInfo(
+                        admin.getMember().getId(),
+                        admin.getMember().getNickname(),
+                        admin.getMember().getProfileImage()
+                    ),
+                    Collectors.toList()
+                )
+            ));
+
+        return communities.stream()
+            .map(c -> new CommunityDto.Response(
+                c.getId(),
+                c.getName(),
+                c.getRegion(),
+                c.getImageUrl(),
+                c.getStatus(),
+                memberCountByCommunityId.getOrDefault(c.getId(), 0L),
+                groupCountRaw.getOrDefault(c.getId(), 0L).intValue(),
+                adminsByCommunityId.getOrDefault(c.getId(), Collections.emptyList()),
+                c.getInviteCode()
+            ))
             .collect(Collectors.toList());
-        return new CommunityDto.Response(
-            c.getId(), c.getName(), c.getRegion(), c.getImageUrl(), c.getStatus(),
-            memberCount, groupCount, admins, c.getInviteCode()
-        );
+    }
+
+    private Map<Long, Long> toLongMap(Collection<Object[]> rows) {
+        return rows.stream()
+            .collect(Collectors.toMap(
+                row -> (Long) row[0],
+                row -> ((Number) row[1]).longValue()
+            ));
     }
 }
